@@ -453,14 +453,14 @@ imageview_mplayer_create_thumbnail (GimvImageView *iv, const gchar *cache_write_
                                     iv->info);
 
    if (imcache) {
-      gimv_image_unref (imcache);
+      g_object_unref (G_OBJECT (imcache));
       g_signal_emit_by_name (G_OBJECT (iv),
                              "thumbnail_created",
                              iv->info);
    }
 
    g_free (filename);
-   gimv_image_unref (image);
+   g_object_unref (G_OBJECT (image));
    g_free (tmpfile);
 }
 
