@@ -1,5 +1,16 @@
 2007-10-20 Takuro Ashie <ashie@homa.ne.jp>
 
+	* plugins/image_loader/pixbuf_anim.c, plugins/image_loader/mng.c,
+	  plugins/image_loader/pixbuf_loader.c,
+	  plugins/image_view/image_view_xine.c,
+	  plugins/image_view/image_view_mplayer.c,
+	  src/gimv_thumb.c, src/gimv_image_view.c, src/gimv_image_loader.c,
+	  src/gimv_image.c, src/gimv_image.h, src/gimv_image_saver.c,
+	  src/compare_similar.c, src/gimv_image_view_draw.c:
+	Remove gimv_image_ref() and gimv_image_unref().
+
+2007-10-20 Takuro Ashie <ashie@homa.ne.jp>
+
 	* etc/Makefile.am: Change install path of desktop file.
 	* src/gimageview.desktop: Add Categories and MIMEType field.
 	* plugins/thumbnail/gimv_thumb.c, plugins/thumbnail/xvpics.c,
